# dynamic-island-4win

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-all-commands.json
src-tauri/resources/: get_hardware_info.ps1
src-tauri/src/: lib.rs  main.rs
src/components/: CompactIsland.tsx  TabApps.tsx  TabDrop.tsx  TabHardware.tsx  TabMusic.tsx  TabNotes.tsx  TabNotesStats.tsx  TabNotifications.tsx  TabPomo.tsx  TabPomoReport.tsx  TabSettings.tsx
src/hooks/: useBattery.ts  useClickTracker.ts  useMedia.ts  useSettings.ts
src/utils/: appIcons.tsx  i18n.json  i18n.ts
