[package]
name = "dynamic-island"
version = "0.1.0"
description = "Dynamic Island for Windows"
authors = ["Souverth"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
windows = { version = "0.52", features = ["Foundation", "Foundation_Collections", "Media_Control", "Storage_Streams", "UI_Notifications", "UI_Notifications_Management", "ApplicationModel"] }
base64 = { version = "0.22" }
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-drag = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

